// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders correctly 1`] = `
<div
  className="gmagic-error-js"
>
  <p>
    Something went wrong.  Please 
    <a
      href="https://github.com/codingjack/gmagic/issues"
    >
      report
    </a>
     the error below.
    <i>
      A Button Component requires text or an icon
    </i>
  </p>
  <p>
    <i>
      A Button Component requires text or an icon
    </i>
  </p>
</div>
`;

exports[`it renders correctly 2`] = `
<div
  className="gmagic-error-js"
  icon="check"
  namespace="name-space"
  onClick={[Function]}
  section="editor"
  selected={true}
>
  <p>
    Something went wrong.  Please 
    <a
      href="https://github.com/codingjack/gmagic/issues"
    >
      report
    </a>
     the error below.
    <i>
      A Button Component requires text or an icon
    </i>
  </p>
  <p>
    <i>
      A Button Component requires text or an icon
    </i>
  </p>
</div>
`;

exports[`onClick callback works and it unmounts should match the snapshot 1`] = `"<button class=\\"gmagic-btn gmagic-white gmagic-btn-icon-only gmagic-menu-tab\\" role=\\"tab\\" tabindex=\\"0\\"><svg class=\\"MuiSvgIcon-root\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" aria-hidden=\\"true\\"><path d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\"></path></svg></button>"`;
